# demo

./: README.md
Android/CleanArchitecture/: build.gradle.kts  settings.gradle.kts
Android/CleanArchitecture/app/: build.gradle.kts
Android/CleanArchitecture/app/src/main/: AndroidManifest.xml
Android/CleanArchitecture/app/src/main/proto/: user_preferences.proto
Android/CleanArchitecture/app/src/main/res/values/: themes.xml
Android/CleanArchitecture/gradle/wrapper/: gradle-wrapper.properties
Android/Compose/app/: build.gradle.kts
Android/Compose/app/src/main/: AndroidManifest.xml
Android/Compose/gradle/wrapper/: gradle-wrapper.properties
NDK/AutomaticNative/: settings.gradle.kts
NDK/AutomaticNative/app/: build.gradle.kts
NDK/AutomaticNative/app/src/main/: AndroidManifest.xml
NDK/AutomaticNative/app/src/main/cpp/: main.cpp
NDK/AutomaticNative/gradle/wrapper/: gradle-wrapper.properties
NDK/ManualNative/: AndroidManifest.xml  CMakeLists.txt  build.gradle  main.cpp  settings.gradle
NDK/ManualNative/gradle/wrapper/: gradle-wrapper.properties
NDK/Memroy/: settings.gradle.kts
NDK/Memroy/app/: build.gradle.kts
NDK/Memroy/app/src/main/cpp/: CMakeLists.txt  main.cpp
OpenGL/OpenGLCamera/: settings.gradle.kts
OpenGL/OpenGLCamera/app/: build.gradle.kts
OpenGL/OpenGLCamera/app/src/main/cpp/: CMakeLists.txt
OpenGL/Texture/: settings.gradle.kts
OpenGL/Texture/app/: build.gradle.kts
OpenGL/Texture/app/src/main/: AndroidManifest.xml
OpenGL/Texture/app/src/main/cpp/: CMakeLists.txt
OpenGL/Texture/app/src/main/cpp/core/: Asset.h  (+6 more)
OpenGL/Transformations/: settings.gradle.kts
OpenGL/Transformations/app/: build.gradle.kts
OpenGL/Transformations/app/src/main/: AndroidManifest.xml
OpenGL/Transformations/app/src/main/cpp/: CMakeLists.txt
OpenGL/Transformations/app/src/main/cpp/core/: Application.cpp  EglManager.cpp  EglManager.h  Shader.cpp  main.cpp
OpenGL/Transformations/app/src/main/cpp/object/: Object.cpp  Object.h  TransformSample.cpp  TransformSample.h
OpenGL/Transformations/app/src/main/cpp/utils/: Log.h
OpenGL/Triangle/: settings.gradle.kts
OpenGL/Triangle/app/: build.gradle.kts
OpenGL/Triangle/app/src/main/: AndroidManifest.xml
OpenGL/Triangle/app/src/main/cpp/: Application.cpp  Application.h  Asset.cpp  CMakeLists.txt  EglManager.cpp  EglManager.h  GLEnv.cpp  GLEnv.h  Shader.cpp  Shader.h  Triangle.cpp  Triangle.h  main.cpp
(+57 files in other folders)
